--- a/homebrew.yml
+++ b/homebrew.yml
@@ -2,9 +2,15 @@ taps:
   - "homebrew/cask-fonts"
 
 formulae:
+  # mac app store cli
+  - "mas"
+
   # node version manager
   - "fnm"
+
   - "openssh"
+
+  - "starship"
 
   - "dockutil"
 
@@ -27,6 +33,8 @@ formulae:
   - "font-jetbrains-mono-nerd-font"
 
 casks:
+  - "secretive"
+
   # dev tools / productivity
   - "alacritty"
   - "visual-studio-code"
@@ -47,7 +55,7 @@ casks:
   - "rectangle"
 
   # vm
-  - "homebrew/cask-versions/parallels18"
+  - "parallels@18"
   - "utm"
 
   # media
